# RAG-with-RBAC

./: .env.example  .gitignore  Dockerfile  README.md  _config.yml  docker-compose.yml  index.md  pyproject.toml
.github/workflows/: ci.yml
_layouts/: default.html
_pages/: about.md
assets/css/: main.css
assets/js/: main.js
data/documents/: company_security_policy.md  finance_q3_budget.md  hr_payroll_policy.md  marketing_launch_plan.md
src/atlas_rag/: auth.py  config.py  guardrails.py  ingestion.py  llm.py  main.py  models.py  monitoring.py  retrieval.py
static/: app.css  app.js
templates/: index.html
tests/: test_api.py  test_auth.py  test_guardrails.py
