[project]
name = "atlas-rag-assistant"
version = "0.1.0"
description = "Production-style secure RAG assistant with RBAC, guardrails, monitoring, and evaluations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "python-multipart>=0.0.20,<0.1.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<0.29.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-cov>=6.2.1,<7.0.0",
  "ruff>=0.12.0,<0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

